BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Meeting_Contract_BMS_EMEA__c.object
<CustomObject>
    <description>VPRO Oct 2013: Object part of the Field Force Meeting module for BMS EMEA. Child object of Master File to store Contracts to be delivered as part of the related Meetings.</description>
    <fields>
        <fullName>Contract_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: Name of the Contract.</description>
        <inlineHelpText>Details of standard contracts to be used for this activity.</inlineHelpText>
        <label>Contract</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS_SHARED__c</fullName>
        <description>VPRO Feb 2014: external ID used for data loading</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FFM_Step_Meeting_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Feb 2014: FFM Step from the Meeting. Used in a validation rule.</description>
        <formula>TEXT( Meeting_BMS_EMEA__r.FFM_Step_BMS_EMEA__c )</formula>
        <label>FFM Step Meeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFM_Step_Original_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Feb 2014: FFM Step from the Meeting, populated through a workflow. Created once the Material is created. Used in a validation rule.</description>
        <label>FFM Step Original</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: parent Meeting.</description>
        <label>Meeting</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Meeting Contracts</relationshipLabel>
        <relationshipName>Meeting_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ref_No_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: field used in Meeting Contracts layouts.</description>
        <label>Ref No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Meeting Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_BMS_EMEA__c</columns>
        <columns>Ref_No_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MC-{00000}</displayFormat>
        <label>Meeting Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Contracts</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA_Meeting_Contract</fullName>
        <active>true</active>
        <description>Meeting Material related to a Field Force Meeting</description>
        <label>BMS - EMEA - Meeting Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Meeting_Contract_PostExec</fullName>
        <active>true</active>
        <description>Meeting Contract related to a Field Force Meeting</description>
        <label>BMS - EMEA - Meeting Contract PostExec</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Meeting_Contract_PostExec_PTA</fullName>
        <active>true</active>
        <description>Meeting Contract related to a Field Force Meeting</description>
        <label>BMS - EMEA - Meeting Contract PostExec PTA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BMS_EMEA_FFM_Contract_Co_Author</fullName>
        <active>true</active>
        <description>VPRO 7 March 2014: Validation to not allow a co-author of the meeting to modify any fields.</description>
        <errorConditionFormula>AND( 
$User.Id &lt;&gt;  Meeting_BMS_EMEA__r.OwnerId,
TEXT(Meeting_BMS_EMEA__r.FFM_Step_BMS_EMEA__c) = &apos;Meeting Post-Execution&apos;,
OR(
$Profile.Name = &apos;BMS - EMEA - REP - MSL&apos;, 
$Profile.Name = &apos;BMS - EMEA - REP - SALES&apos;)
)</errorConditionFormula>
        <errorDisplayField>Contract_BMS_EMEA__c</errorDisplayField>
        <errorMessage>You are not allowed to change any fields as you are co-author of the Meeting.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMS_EMEA_PlanContractsNOKPostExecution</fullName>
        <active>true</active>
        <description>VPRO EMEA Feb 2014: Contracts created during the Meeting Plan phase cannot be modified during the Post-Execution phase (expect for the Used field).</description>
        <errorConditionFormula>AND( 
OR( 
ISCHANGED(Contract_BMS_EMEA__c), 
ISCHANGED(Meeting_BMS_EMEA__c)
), 
RecordType.DeveloperName &lt;&gt; &apos;BMS_EMEA_Meeting_Contract_PostExec_PTA&apos;, 
FFM_Step_Meeting_BMS_EMEA__c = &apos;Meeting Post-Execution&apos;, 
FFM_Step_Original_BMS_EMEA__c = &apos;Meeting Planning&apos; 
)</errorConditionFormula>
        <errorMessage>Contracts created during the Meeting Planning phase cannot be modified during the Post-Execution phase. Please Cancel.</errorMessage>
    </validationRules>
</CustomObject>